tests/baselines/reference/parserErrorRecovery_SwitchStatement1.errors.txt
parserErrorRecovery_SwitchStatement1.ts(1,9): error TS2304: Cannot find name 'e'.
parserErrorRecovery_SwitchStatement1.ts(4,5): error TS1109: Expression expected.
parserErrorRecovery_SwitchStatement1.ts(6,5): error TS1109: Expression expected.


==== parserErrorRecovery_SwitchStatement1.ts (3 errors) ====
    switch (e) {
            ~
!!! error TS2304: Cannot find name 'e'.
        case 1:
           1 + 
        case 2:
        ~~~~
!!! error TS1109: Expression expected.
           1 + 
        default:
        ~~~~~~~
!!! error TS1109: Expression expected.
    }